...
									Label("Delete", image: "trash")
								}
							}
						}
						.onDelete(perform: deleteItems)
					}
					.accessibilityIdentifier("PhonesList")
				} else {
					Text("No phones")
						.font(.largeTitle)
						.foregroundStyle(Color.secondary)
				}
			}
...
		}
#endif
		ToolbarItem {
			Button(action: addItem) {
				Label("Add Phone", systemImage: "plus")
			}
			.accessibilityIdentifier("AddPhoneButton")
		}
		ToolbarItem {
			Button {
				showingDeleteAll = true
			} label: {
				Label("Delete All", systemImage: "trash")
...
