...
				if phone.cordlessHandsetsIHave.count < phone.maxCordlessHandsets || phone.maxCordlessHandsets == -1 {
					Button(action: addHandset) {
						Label("Add", systemImage: "plus")
							.frame(width: 100, alignment: .leading)
					}
					.buttonStyle(.borderless)
					.accessibilityIdentifier("AddHandsetButton")
				} else if phone.cordlessHandsetsIHave.count > phone.maxCordlessHandsets {
					WarningText("You have more handsets than the base can handle!")
				}
                Button(role: .destructive) {
					phone.cordlessHandsetsIHave.removeAll()
					phone.chargersIHave.removeAll()
...
				}
					Button(action: addCharger) {
						Label("Add", systemImage: "plus")
							.frame(width: 100, alignment: .leading)
					}
					.buttonStyle(.borderless)
					.accessibilityIdentifier("AddChargerButton")
			}
		}
	}
    
    // MARK: - Data Management

...
